force-app/main/default/objects/Order/fields/Pending_Quantityy1__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quantityy1__c</fullName>
    <label>Pending Quantity1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>