force-app/main/default/objects/Order/recordTypes/Purchase_Orderr.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Orderr</fullName>
    <active>true</active>
    <label>Purchase Orders</label>
</RecordType>