force-app/main/default/objects/Order/recordTypes/Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>Sales_Order</fullName>
    <active>true</active>
    <label>Sales Order</label>
</RecordType>