force-app/main/default/objects/Order/validationRules/Order_Canceled_to_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Canceled_to_QA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status ),&quot;Order Canceled&quot;), OR(ISPICKVAL( Status ,&quot;Under QA&quot;),ISPICKVAL( Status ,&quot;QA Completed&quot;)))</errorConditionFormula>
    <errorMessage>The Order is already CANCELED, Can&apos;t change the STATUS.</errorMessage>
</ValidationRule>