force-app/main/default/objects/Order/validationRules/order_canceled_to_recieved.validationRule-meta.xml
<ValidationRule>
    <fullName>order_canceled_to_recieved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status ),&quot;Order Canceled&quot;), OR((ISPICKVAL( Status ,&quot;Order Recieved&quot;)),(ISPICKVAL( Status ,&quot;Order Placed&quot;))))</errorConditionFormula>
    <errorMessage>Can&apos;t change the order status,it is already canceled.</errorMessage>
</ValidationRule>