force-app/main/default/objects/Order/validationRules/Order_Quantity_Should_Not_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Quantity_Should_Not_Change</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( ISPICKVAL( Status , &quot;Order Placed&quot;) )</errorConditionFormula>
    <errorMessage>Order Quantity cannot change once status is Received or Under QA or QA Completed</errorMessage>
</ValidationRule>