force-app/main/default/objects/Order/validationRules/Order_recieved_back.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_recieved_back</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status),&quot;Order Recieved&quot;),(ISPICKVAL( Status ,&quot;Order Placed&quot;)))</errorConditionFormula>
    <errorMessage>The Order is already RECIEVED, Can&apos;t change it&apos;s STATUS.</errorMessage>
</ValidationRule>