force-app/main/default/objects/Order/validationRules/order_recieved_to_canceled.validationRule-meta.xml
<ValidationRule>
    <fullName>order_recieved_to_canceled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( Status ),&quot;Order Recieved&quot;), (ISPICKVAL( Status ,&quot;Order Canceled&quot;)))</errorConditionFormula>
    <errorMessage>The Order is already RECIEVED, Can&apos;t change the Status to CANCELED.</errorMessage>
</ValidationRule>